# scikit-elasticity

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: publish.yml  tests.yml
_modules/: index.html
_modules/skel/: Mandel.html  Voigt.html  _volumeelement.html
doc/: conf.py  index.rst
skel/: Eshelby.py  Hooke.py  Mandel.py  Voigt.py  __init__.py  _conventions.py  _volumeelement.py
tests/: conftest.py  test_Eshelby.py  test_Hooke.py  test_VolumeElement.py  test_conventions.py
